# sims4-mod-manager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
brand/: BRANDING-SPEC.md  rasterize.py  rasterize.sh
brand/icons/: icon.icns
brand/preview/: render-v3.html  render.html
sims4_mod_manager/: __init__.py  cli.py  conflicts.py  manager.py  parser.py
src/main/: main.js  mod-manager.js  updater.js
src/preload/: preload.js
src/renderer/: app.js  index.html  styles.css
tests/: conftest.py  test_conflicts.py  test_manager.py  test_parser.py
