[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sims4-mod-manager"
version = "0.1.0"
description = "CLI tool for managing The Sims 4 mods"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Stark Studio Labs", email = "studio@starklabs.dev" },
]
keywords = ["sims4", "mods", "manager", "gaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
s4mm = "sims4_mod_manager.cli:main"
sims4-mod-manager = "sims4_mod_manager.cli:main"

[tool.setuptools.packages.find]
include = ["sims4_mod_manager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
